Got CMake to build the project.

--- a/utilities/CMakeLists.txt
+++ b/utilities/CMakeLists.txt
@@ -1,12 +1,20 @@
 cmake_minimum_required(VERSION 3.10)
 
 # set the project name
-project(Utilities VERSION 0.5)
+project(utilities VERSION 0.5)
 
 # specify the C++ standard
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
-add_library(vec3 vec3.cxx)
-add_library(ray ray.hpp)
-add_library(color color.cxx)
+add_subdirectory(math)
+
+file(GLOB_RECURSE SOURCES
+	src/*.cxx)
+
+add_library(utilities ${SOURCES})
+
+target_link_libraries(utilities PUBLIC math)
+
+target_include_directories(utilities PUBLIC include)
+target_include_directories(utilities PUBLIC math/include)
