--- a/Tracer/CMakeLists.txt
+++ b/Tracer/CMakeLists.txt
@@ -7,16 +7,15 @@ project(RayTracer VERSION 0.2)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
-# add the imageWriters library
-add_subdirectory(imageWriters)
 # add the utilities library
 add_subdirectory(../utilities utilities)
 
 file(GLOB_RECURSE SOURCES
-	imageWriters/src/*.cxx)
+	src/*.cxx)
 
 # add the executable
 add_executable(RayTracer ${SOURCES} main.cxx)
 
+#target_include_directories(RayTracer PUBLIC ../../utilities/stb)
+
 target_link_libraries(RayTracer PUBLIC utilities)
-target_link_libraries(RayTracer PUBLIC imageWriters)
