--- a/utilities/CMakeLists.txt
+++ b/utilities/CMakeLists.txt
@@ -13,13 +13,16 @@ file(GLOB_RECURSE SOURCES
 
 file(GLOB_RECURSE INCLUDE_DIRS LIST_DIRECTORIES TRUE
 	CONFIGURE_DEPENDS
-	./*/include
+	include/*[^hpp] # The idea is to include all the `files' inside include/ as
+					# well as the directories, but to exclude all the .hpp
+					# files. (The assumption is that the directories only cont-
+					# ain .hpp files.)
 	)
 
 add_library(utilities ${SOURCES})
 
+#message(STATUS "The value of INCLUDE_DIRS is ${INCLUDE_DIRS}")
 target_include_directories(utilities PUBLIC ${INCLUDE_DIRS} PUBLIC include)
-#target_include_directories(utilities PUBLIC math/include)
 
 #include the header-only stb library in the search path
 target_include_directories(utilities PUBLIC stb)
