--- a/.github/workflows/linux-clang.yml
+++ b/.github/workflows/linux-clang.yml
@@ -3,10 +3,6 @@ on:
   push:
     branches: main
 
-env:
-  # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
-  BUILD_TYPE: Release
-
 jobs:
   ubuntu_build:
     runs-on: ${{ matrix.os }}
@@ -14,13 +10,12 @@ jobs:
       matrix:
         os: [ ubuntu-18.04, ubuntu-20.04 ]
         clang-version: [ 10, 11, 12 ]
-        BUILD_TYPE: [ Release, Debug, Profile ]
-
         exclude:
-          # excludes clang-11 on Ubuntu 18.04 because it doesn't exist in the
+          # excludes clang-11 and clang-12 on Ubuntu 18.04 because it doesn't exist in the
           #standard repositories.
         - os: ubuntu-18.04
-          clang-version: 11
+          clang-version: [ 11, 12 ]
+        BUILD_TYPE: [ Release, Debug, Profile ]
 
     name: ${{ matrix.os }} (Clang ${{matrix.clang-version }}) (${{ matrix.BUILD_TYPE}} Build)
     steps:
