--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -9,7 +9,8 @@ jobs:
     runs-on: windows-latest
     strategy:
       matrix:
-        BUILD_TYPE: [ Release, Debug, Profile ]
+        BUILD_TYPE: [ Release, Debug ] #, Profile ]
+        #Removing the Profile build for now because the CMake stuff required for correctly handling that is pretty complex
 
     name: Windows (VS 2019) (${{matrix.BUILD_TYPE}} Build)
     steps:
