--- a/.github/workflows/linux-gcc.yml
+++ b/.github/workflows/linux-gcc.yml
@@ -8,14 +8,14 @@ jobs:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        gcc-version: 10 #kept it like this to allow for future additions in the build matrix
+        gcc-version: [ 10 ] #kept it like this to allow for future additions in the build matrix
         BUILD_TYPE: [ Release, Debug, Profile ]
 
-    name: Ubuntu 20.04 ${{ matrix.gcc-version }}) (${{ matrix.BUILD_TYPE}} Build)
+    name: Ubuntu 20.04 (GCC ${{ matrix.gcc-version }}) (${{ matrix.BUILD_TYPE}} Build)
     steps:
       - uses: actions/checkout@v2
 
-	    - name: Install Dependencies
+      - name: Install Dependencies
         run: |
           sudo apt-get update -q
           sudo apt-get install -yq --no-install-recommends \
@@ -26,7 +26,7 @@ jobs:
         with:
           key: ubuntu-20.04-gcc-${{ matrix.gcc-version }}
           max-size: 50M
-    
+
       - name: Configure CMake
         run: |
           cmake -B${{ github.workspace }}/build \
