Updated all the workflows to also run the executable.

--- a/.github/workflows/linux-gcc.yml
+++ b/.github/workflows/linux-gcc.yml
@@ -43,3 +43,8 @@ jobs:
           cmake --build ${{ github.workspace }}/build \
                 --config ${{ matrix.BUILD_TYPE }} \
                 -- -j2
+    
+      - name: Run executable
+        run: |
+          cd ${{ github.workspace }}/build/Tracer/ \
+          ./RayTracer
