--- a/.github/workflows/linux-clang.yml
+++ b/.github/workflows/linux-clang.yml
@@ -51,3 +51,8 @@ jobs:
           cmake --build ${{ github.workspace }}/build \
                 --config ${{ matrix.BUILD_TYPE }} \
                 -- -j2
+      
+      - name: Run executable
+        run: |
+          cd ${{ github.workspace }}/build/Tracer/ \
+          ./RayTracer
