Fixed the error in the final step in the workflows.

--- a/.github/workflows/linux-clang.yml
+++ b/.github/workflows/linux-clang.yml
@@ -54,5 +54,5 @@ jobs:
       
       - name: Run executable
         run: |
-          cd ${{ github.workspace }}/build/Tracer/ \
+          cd build/Tracer
           ./RayTracer
