--- a/.github/workflows/linux-gcc.yml
+++ b/.github/workflows/linux-gcc.yml
@@ -46,5 +46,5 @@ jobs:
     
       - name: Run executable
         run: |
-          cd ${{ github.workspace }}/build/Tracer/ \
+          cd build/Tracer
           ./RayTracer
