--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -32,5 +32,5 @@ jobs:
     
     - name: Run executable
       run: |
-        cd ${{ github.workspace }}/build/Tracer/ `
-        ./RayTracer.exe
+        cd build/Tracer/${{ matrix.BUILD_TYPE }}
+        & "./RayTracer.exe"
