Updated the workflows with the new file paths.

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -48,5 +48,5 @@ jobs:
     
       - name: Run executable
         run: |
-          cd build/Tracer
-          ./RayTracer
+          cd build/Celerity
+          ./Celerity
