Removed the run portion of the workflow.
Running the program on a full scene with many objects without
BVHs or other optimization takes a lot of time, so I removed
that portion from the workflow. Now, we just check to see if
the project builds.

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -46,7 +46,7 @@ jobs:
                 --config ${{ matrix.BUILD_TYPE }} \
                 -- -j2
     
-      - name: Run executable
-        run: |
-          cd build/Celerity
-          ./Celerity
+#      - name: Run executable
+#        run: |
+#          cd build/Celerity
+#          ./Celerity
