--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -13,7 +13,9 @@ jobs:
 
     name: Ubuntu 20.04 (GCC ${{ matrix.gcc-version }}) (${{ matrix.BUILD_TYPE}} Build)
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+        with:
+          submodules: recursive
 
       - name: Install Dependencies
         run: |
