--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -14,22 +14,24 @@ jobs:
 
     name: Windows (VS 2019) (${{ matrix.BUILD_TYPE }} Build)
     steps:
-    - uses: actions/checkout@v2
-
-    - name: Configure CMake
-      # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
-      # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: |
-        cmake -S. -B${{ github.workspace }}/build `
-              -DCMAKE_BUILD_TYPE=${{ matrix.BUILD_TYPE }}
-
-    - name: Build
-      # Build your program with the given configuration
-      run: |
-        cmake --build ${{ github.workspace }}/build `
-              --config ${{ matrix.BUILD_TYPE }} `
-              -- /m:12
-    
+      - uses: actions/checkout@v3
+        with:
+          submodules: recursive
+  
+      - name: Configure CMake
+        # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
+        # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
+        run: |
+          cmake -S. -B${{ github.workspace }}/build `
+                -DCMAKE_BUILD_TYPE=${{ matrix.BUILD_TYPE }}
+  
+      - name: Build
+        # Build your program with the given configuration
+        run: |
+          cmake --build ${{ github.workspace }}/build `
+                --config ${{ matrix.BUILD_TYPE }} `
+                -- /m:12
+      
 #   - name: Run executable
 #      run: |
 #        cd build/Celerity/${{ matrix.BUILD_TYPE }}
